include_directories("747 Largest Number At Least Twice Of Others")
add_subdirectory("747 Largest Number At Least Twice Of Others")

include_directories("724 Find Pivot Index")
add_subdirectory("724 Find Pivot Index")

include_directories("231 Power Of Two")
add_subdirectory("231 Power Of Two")

# Enable testing
enable_testing()
