include_directories("747-Largest-Number-At-Least-Twice-Of-Others")
add_subdirectory("747-Largest-Number-At-Least-Twice-Of-Others")

include_directories("724-Find-Pivot-Index")
add_subdirectory("724-Find-Pivot-Index")

include_directories("498-Diagonal-Traverse")
add_subdirectory("498-Diagonal-Traverse")

include_directories("66-Plus-One")
add_subdirectory("66-Plus-One")

include_directories("231-Power-Of-Two")
add_subdirectory("231-Power-Of-Two")

include_directories("342-Power-Of-Four")
add_subdirectory("342-Power-Of-Four")

include_directories("338-Counting-Bits")
add_subdirectory("338-Counting-Bits")

include_directories("190-Reverse-Bits")
add_subdirectory("190-Reverse-Bits")

# Enable testing
enable_testing()
